--- a/Classes/View/WordPress/WPSPostCell.xib
+++ b/Classes/View/WordPress/WPSPostCell.xib
@@ -22,24 +22,17 @@
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14">
-                        <rect key="frame" x="68" y="3" width="188" height="18"/>
+                        <rect key="frame" x="66" y="3" width="188" height="18"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="11"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" misplaced="YES" text="Alexis Kinsella" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35">
-                        <rect key="frame" x="89" y="38" width="222" height="18"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" misplaced="YES" text="By Alexis Kinsella" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35" userLabel="Label - Author">
+                        <rect key="frame" x="66" y="38" width="245" height="18"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="13"/>
-                        <color key="textColor" red="0.39926545520000001" green="0.19288542319999999" blue="0.33100869799999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Par" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="48">
-                        <rect key="frame" x="66" y="38" width="24" height="18"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="italicSystem" pointSize="13"/>
-                        <color key="textColor" red="0.39926545520000001" green="0.19288542319999999" blue="0.33100869799999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="30">
@@ -62,15 +55,13 @@
                 <constraints>
                     <constraint firstItem="3" firstAttribute="leading" secondItem="50" secondAttribute="trailing" constant="13" id="1YO-S8-uIe"/>
                     <constraint firstItem="3" firstAttribute="top" secondItem="14" secondAttribute="bottom" constant="2" id="36y-yK-2nU"/>
-                    <constraint firstItem="48" firstAttribute="leading" secondItem="50" secondAttribute="trailing" constant="13" id="4uP-fZ-FvT"/>
                     <constraint firstAttribute="trailing" secondItem="35" secondAttribute="trailing" constant="9" id="7EB-9u-HZJ"/>
                     <constraint firstItem="14" firstAttribute="top" secondItem="WVF-AT-qLJ" secondAttribute="top" constant="3" id="ACA-pf-xRq"/>
-                    <constraint firstItem="35" firstAttribute="leading" secondItem="48" secondAttribute="trailing" constant="-1" id="AEo-Ve-VzT"/>
+                    <constraint firstItem="35" firstAttribute="leading" secondItem="50" secondAttribute="trailing" constant="13" id="CYm-fU-gie"/>
                     <constraint firstAttribute="trailing" secondItem="3" secondAttribute="trailing" constant="9" id="OSV-jZ-uwA"/>
-                    <constraint firstItem="14" firstAttribute="leading" secondItem="50" secondAttribute="trailing" constant="15" id="T0u-9f-2ah"/>
+                    <constraint firstItem="14" firstAttribute="leading" secondItem="50" secondAttribute="trailing" constant="13" id="T0u-9f-2ah"/>
                     <constraint firstItem="50" firstAttribute="leading" secondItem="WVF-AT-qLJ" secondAttribute="leading" constant="13" id="Wru-iX-CNM"/>
                     <constraint firstItem="50" firstAttribute="top" secondItem="WVF-AT-qLJ" secondAttribute="top" constant="13" id="acm-k7-kGL"/>
-                    <constraint firstItem="48" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="2" id="vuN-nP-lLV"/>
                     <constraint firstItem="35" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="2" id="zzQ-ax-2TX"/>
                 </constraints>
             </tableViewCellContentView>
