--- a/Classes/View/Vimeo/VMVideoCell.xib
+++ b/Classes/View/Vimeo/VMVideoCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A3028" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -52,6 +52,7 @@
                     <constraint firstAttribute="trailing" secondItem="14" secondAttribute="trailing" constant="3" id="EmV-ZK-58u"/>
                     <constraint firstAttribute="bottom" secondItem="45" secondAttribute="bottom" constant="3" id="IvQ-xC-Iiq"/>
                     <constraint firstItem="6Ck-rt-hdd" firstAttribute="top" secondItem="6oP-SL-zxP" secondAttribute="top" id="Kcb-aA-6U3"/>
+                    <constraint firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="Pj3-3M-Zsk"/>
                     <constraint firstAttribute="bottom" secondItem="14" secondAttribute="bottom" constant="3" id="p1C-nf-Tmj"/>
                     <constraint firstItem="3" firstAttribute="leading" secondItem="6Ck-rt-hdd" secondAttribute="trailing" constant="8" id="qry-2Z-b1Y"/>
                 </constraints>
